# cookbook

./: README.md
examples/lfm-encoder-classification/: .gitignore  Makefile  README.md  config.ecthr-a.yaml  pyproject.toml  train.py
examples/lfm-encoder-classification/sample_data/: test.jsonl  train.jsonl  validation.jsonl
examples/localcowork/: CLAUDE.md  PROGRESS.yaml  README.md
examples/localcowork/_models/: config.yaml
examples/localcowork/scripts/: convert-8b-a1b.sh  start-model.sh
examples/methane-plume-extraction/: .env.example  .gitignore  AGENTS.md  MODEL_ACCESS.md  README.md  agent.md  requirements.txt
examples/methane-plume-extraction/scripts/: download_models.sh  serve_demo.py  serve_local_methane.py
examples/methane-plume-extraction/training/: README.md  leap_finetune_modal.yaml  sample_train_row.json  schema.yaml  training_manifest_context_v6.json
examples/telco-triage-ios/: ARCHITECTURE.md  INTEGRATION_GUIDE.md  MODELS.md  README.md  bootstrap-models.sh  project.yml
examples/telco-triage-ios/TelcoTriageTests/: AnswerComposerTests.swift  BM25HierarchyRetrieverSwiftParityTests.swift  ChatViewModelIntegrationTests.swift  ConversationRecoveryTests.swift  ConversationStateTests.swift  MultiTurnHeuristicsTests.swift  MultiTurnIntegrationTests.swift  MultiTurnRetrievalAugmentationTests.swift  PhoneFlowValidationTests.swift  TelcoDialogueBlackboardTests.swift  TelcoDispatcherComposerPathTests.swift  TelcoPolicyEngineTests.swift  TelcoStateOperationResolverTests.swift  TelcoSupportSessionTests.swift  ToolExecutorTests.swift  (+1 more)
(+112 files in other folders)
